:sparkles: feat: complete apllication with all endpoints and postman collection